--- a/GRID/css/main.css
+++ b/GRID/css/main.css
@@ -13,9 +13,9 @@ body {
 .container {
   display: grid;
   height: 100vh;
-  grid-template-columns: 0.7fr 1fr 1fr 1fr;
-  grid-template-rows: 0.2fr 2fr 1fr 0.3fr;
-  grid-template-areas: "menuNav menuNav menuNav menuNav" "sidebar main main main" "sidebar content1 content2 content3" "sidebar footer footer footer";
+  grid-template-columns: 0.7fr 1fr 1fr;
+  grid-template-rows: 0.2fr 1.2fr 0.4fr 0.1fr;
+  grid-template-areas: " menuNav menuNav menuNav" "main main main" "content1 content2 content3" "footer footer footer";
   grid-gap: 0.1rem;
 }
 
@@ -32,10 +32,10 @@ main {
 }
 
 /*section sidebar*/
-.sidebar {
+/* .sidebar {
   background-color: #00a8ff;
   grid-area: sidebar;
-}
+} */
 
 /*section content1*/
 .content1 {
@@ -59,4 +59,12 @@ main {
 footer {
   background-color: #c23616;
   grid-area: footer;
+}
+
+@media only screen and (max-width: 550px) {
+  .container {
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.4fr 2.2fr 0.7fr 0.7fr 0.7fr .2fr;
+    grid-template-areas: "menuNav" "main" "content1" "content2" "content3" "footer" ;
+  }
 }
