--- a/GRID/css/main.css
+++ b/GRID/css/main.css
@@ -1,12 +1,12 @@
 /*reset*/
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-size: 100%;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-size: 100%;
 }
 body {
-    font-size: 66.5%;
+  font-size: 66.5%;
 }
 
 /*div*/
@@ -30,12 +30,6 @@ main {
   background-color: #273c75;
   grid-area: main;
 }
-
-/*section sidebar*/
-/* .sidebar {
-  background-color: #00a8ff;
-  grid-area: sidebar;
-} */
 
 /*section content1*/
 .content1 {
@@ -64,7 +58,7 @@ footer {
 @media only screen and (max-width: 550px) {
   .container {
     grid-template-columns: 1fr;
-    grid-template-rows: 0.4fr 2.2fr 0.7fr 0.7fr 0.7fr .2fr;
-    grid-template-areas: "menuNav" "main" "content1" "content2" "content3" "footer" ;
+    grid-template-rows: 0.4fr 2.2fr 0.7fr 0.7fr 0.7fr 0.2fr;
+    grid-template-areas: "menuNav" "main" "content1" "content2" "content3" "footer";
   }
 }
