--- a/FLEX/css/index.css
+++ b/FLEX/css/index.css
@@ -6,13 +6,79 @@
     box-sizing: border-box;
 }
 
-.flex-container {
-    display: flex;
-    width: 70vw;
-    height: 100vh;
-    margin: auto;
+body {
+    font-family: 'Ubuntu', sans-serif;
 }
 
-.flex-item {
-    background-color: #000;
+nav,
+li,
+a {
+    list-style-type: none;
 }
+
+a {
+    text-decoration: none;
+    cursor: pointer;
+    color: inherit;
+}
+
+header {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    width: 100%;
+    color: #000;
+    padding: 35px 100px 0;
+    background-color: #FBFBF2;
+    justify-content: space-between;
+    align-items: center;
+    display: flex;
+}
+
+header h2 {
+    text-transform: uppercase;
+}
+
+header nav {
+    display: flex;
+}
+
+header nav li {
+    margin: 0 15px;
+}
+
+header nav li:first-child {
+    margin-left: 0;
+}
+
+header nav li:last-child {
+    margin-right: 0;
+}
+
+@media(max-width: 1000px) {
+    header {
+        padding: 20px 50px;
+    }
+}
+
+@media(max-width: 700px) {
+    header {
+        flex-direction: column;
+    }
+    header h2 {
+        margin-bottom: 15px;
+    }
+    header nav li {
+        margin: 0 7px;
+    }
+}
+
+
+/* 
+section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 110px 100px;
+} */
